# IoT-Clock-RoomMonitor

./: .gitignore  .gitmodules  README.md
firmware/esp32s3/: .clang-format  .editorconfig  CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/esp32s3/components/BME69xLibrary/: .gitmodules  CMakeLists.txt  README.md  idf_component.yml
firmware/esp32s3/components/BME69xLibrary/src/: bme69xLibrary.cpp  bme69xLibrary.h
firmware/esp32s3/components/BME69xLibrary/src/bme69x/: README.md  bme69x.c  bme69x.h  bme69x_defs.h
firmware/esp32s3/components/BME69xLibrary/src/bme69x/examples/common/: common.c  common.h
firmware/esp32s3/components/BME69xLibrary/src/bme69x/examples/forced_mode/: Makefile  forced_mode.c
firmware/esp32s3/components/BME69xLibrary/src/bme69x/examples/parallel_mode/: Makefile  parallel_mode.c
firmware/esp32s3/components/BME69xLibrary/src/bme69x/examples/self_test/: Makefile  self_test.c
firmware/esp32s3/components/BME69xLibrary/src/bme69x/examples/sequential_mode/: Makefile  sequential_mode.c
firmware/esp32s3/components/grid_composer/: CMakeLists.txt  idf_component.yml
firmware/esp32s3/components/grid_composer/include/: grid_composer.h  grid_composer_defs.h
firmware/esp32s3/components/grid_composer/include/private/: grid_composer_private.h
firmware/esp32s3/components/grid_composer/interface/: grid_composer_renderer.h
firmware/esp32s3/components/grid_composer/platform/esp-arduino/: adafruit_renderer.cpp  adafruit_renderer.h  adafruit_renderer_private.h
firmware/esp32s3/components/grid_composer/src/: grid_composer.c
(+57 files in other folders)
